<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <group android:checkableBehavior="single">
    <item
        android:id="@+id/nav_icebox_list"
        android:icon="@drawable/ic_icebox"
        android:title="@string/navigation_drawer_icebox" />
    <item
        android:id="@+id/nav_favorite_recipe"
        android:icon="@drawable/ic_search"
        android:title="@string/navigation_drawer_favorite_recipe" />
    <item
        android:id="@+id/nav_recipe_search"
        android:icon="@drawable/ic_search"
        android:title="@string/navigation_drawer_search" />
    <item
        android:id="@+id/nav_flyer"
        android:icon="@drawable/ic_delete"
        android:title="@string/navigation_drawer_flyer" />
    <item
        android:id="@+id/nav_season"
        android:icon="@drawable/ic_delete"
        android:title="@string/navigation_drawer_season" />
    <item
        android:id="@+id/nav_market_price"
        android:icon="@drawable/ic_delete"
        android:title="@string/navigation_drawer_market_price" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_delete"
        android:title="@string/settings" />
  </group>
</menu>
