<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/bg_shadow"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
  <TextView
      android:textAlignment="center"
      android:textColor="@color/colorPrimary"
      android:textSize="24sp"
      android:text="@string/empty_title"
      android:id="@+id/textView15"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"/>
  <LinearLayout
      android:layout_gravity="center"
      android:orientation="horizontal"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content">
    <TextView
        android:textSize="24sp"
        android:text="@string/empty_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <ImageView
        android:background="@drawable/bg_circle"
        android:padding="5dp"
        android:src="@drawable/ic_plus"
        android:layout_width="24dp"
        android:layout_height="24dp"/>
    <TextView
        android:textSize="24sp"
        android:text="@string/empty_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
  </LinearLayout>
  <TextView
      android:textAlignment="center"
      android:textSize="24sp"
      android:text="@string/empty_text3"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"/>
</LinearLayout>