<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.recizo.IceboxItemSetActivity">

  <TextView
      android:labelFor="@+id/et_name"
      android:id="@+id/tv_name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/name"
      android:layout_marginStart="8dp"
      app:layout_constraintLeft_toLeftOf="parent"
      android:layout_marginTop="0dp"
      android:layout_marginEnd="8dp"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintHorizontal_bias="0.146"
      app:layout_constraintTop_toBottomOf="@+id/spinner"/>

  <EditText
      android:id="@+id/et_name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="16dp"
      android:ems="10"
      android:inputType="textPersonName"
      android:labelFor="@+id/fragment_icebox_change_name"
      app:layout_constraintHorizontal_bias="0.503"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tv_name"/>

  <TextView
      android:id="@+id/tv_cat"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/category"
      android:layout_marginStart="8dp"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintHorizontal_bias="0.165"
      app:layout_constraintTop_toTopOf="parent"
      android:layout_marginTop="8dp"/>

  <Spinner
      android:id="@+id/spinner"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="0dp"
      app:layout_constraintTop_toBottomOf="@+id/tv_cat"
      android:layout_marginRight="8dp"
      android:layout_marginLeft="8dp"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintHorizontal_bias="0.5" />

  <TextView
      android:labelFor="@+id/et_memo"
      android:id="@+id/tv_memo"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/register_view_memo"
      android:layout_marginRight="8dp"
      app:layout_constraintRight_toRightOf="parent"
      android:layout_marginLeft="8dp"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintHorizontal_bias="0.117"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginTop="8dp"
      app:layout_constraintTop_toBottomOf="@+id/et_name"/>

  <EditText
      android:id="@+id/et_memo"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="19dp"
      android:ems="10"
      android:inputType="textPersonName"
      app:layout_constraintHorizontal_bias="0.503"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tv_memo"/>

  <TextView
      android:id="@+id/tv_date"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/register_view_date"
      android:layout_marginStart="8dp"
      android:layout_marginRight="8dp"
      app:layout_constraintRight_toRightOf="parent"
      android:layout_marginLeft="8dp"
      app:layout_constraintLeft_toLeftOf="parent"
      android:layout_marginTop="14dp"
      app:layout_constraintTop_toBottomOf="@+id/et_memo"
      app:layout_constraintHorizontal_bias="0.122"
      android:layout_marginEnd="8dp"/>

  <DatePicker
      android:id="@+id/date_picker"
      android:layout_width="248dp"
      android:layout_height="174dp"
      android:calendarViewShown="false"
      android:spinnersShown="true"
      android:datePickerMode="spinner"
      android:layout_marginLeft="8dp"
      app:layout_constraintLeft_toLeftOf="parent"
      android:layout_marginRight="8dp"
      app:layout_constraintRight_toRightOf="parent"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginTop="8dp"
      app:layout_constraintTop_toBottomOf="@+id/tv_date"
      tools:targetApi="lollipop"/>

  <LinearLayout
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginBottom="32dp"
      android:orientation="horizontal"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/date_picker"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="8dp">

    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        style="?android:attr/buttonBarButtonStyle"
        android:text="@string/cancel_button"/>

    <Button
        android:id="@+id/register_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        style="?android:attr/button"
        android:text="@string/change_view_change_button"/>
  </LinearLayout>

</android.support.constraint.ConstraintLayout>
