<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.recizo.ChangeActivity">

  <TextView
      android:id="@+id/textView2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/register_view_vegetable_name"
      android:layout_marginStart="8dp"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      android:layout_marginTop="7dp"
      android:layout_marginEnd="8dp"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintHorizontal_bias="0.12"/>

  <TextView
      android:id="@+id/textView3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/register_view_memo"
      android:layout_marginRight="8dp"
      app:layout_constraintRight_toRightOf="parent"
      android:layout_marginLeft="8dp"
      app:layout_constraintLeft_toLeftOf="parent"
      android:layout_marginTop="21dp"
      app:layout_constraintTop_toBottomOf="@+id/fragment_icebox_change_name"
      app:layout_constraintHorizontal_bias="0.12"/>

  <TextView
      android:id="@+id/textView4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/register_view_date"
      android:layout_marginStart="8dp"
      android:layout_marginRight="8dp"
      app:layout_constraintRight_toRightOf="parent"
      android:layout_marginLeft="8dp"
      app:layout_constraintLeft_toLeftOf="parent"
      android:layout_marginTop="14dp"
      app:layout_constraintTop_toBottomOf="@+id/fragment_icebox_change_memo"
      app:layout_constraintHorizontal_bias="0.122"/>

  <EditText
      android:id="@+id/fragment_icebox_change_name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:ems="10"
      android:inputType="textPersonName"
      android:labelFor="@+id/fragment_icebox_change_name"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginLeft="8dp"
      app:layout_constraintLeft_toLeftOf="parent"
      android:layout_marginRight="8dp"
      app:layout_constraintRight_toRightOf="parent"
      android:layout_marginTop="15dp"
      app:layout_constraintTop_toBottomOf="@+id/textView2"
      app:layout_constraintHorizontal_bias="0.503"/>

  <EditText
      android:id="@+id/fragment_icebox_change_memo"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:ems="10"
      android:inputType="textPersonName"
      android:labelFor="@+id/fragment_icebox_change_memo"
      android:layout_marginLeft="8dp"
      app:layout_constraintLeft_toLeftOf="parent"
      android:layout_marginRight="8dp"
      app:layout_constraintRight_toRightOf="parent"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="8dp"
      app:layout_constraintHorizontal_bias="0.503"
      android:layout_marginTop="18dp"
      app:layout_constraintTop_toBottomOf="@+id/textView3"/>

  <DatePicker
      android:id="@+id/fragment_icebox_change_date"
      android:layout_width="248dp"
      android:layout_height="174dp"
      android:calendarViewShown="false"
      android:spinnersShown="true"
      android:datePickerMode="spinner"
      android:layout_marginLeft="8dp"
      app:layout_constraintLeft_toLeftOf="parent"
      android:layout_marginRight="8dp"
      app:layout_constraintRight_toRightOf="parent"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="8dp"
      app:layout_constraintHorizontal_bias="0.5"
      android:layout_marginTop="8dp"
      app:layout_constraintTop_toBottomOf="@+id/textView4"
      tools:targetApi="lollipop"/>

  <LinearLayout
      android:layout_width="0dp"
      android:layout_height="46dp"
      android:layout_marginBottom="32dp"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:layout_marginTop="8dp"
      android:orientation="horizontal"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/fragment_icebox_change_date"
      app:layout_constraintVertical_bias="0.555"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="8dp">


    <!-- TODO styleを考える -->
    <Button
        android:id="@+id/fragment_icebox_change_cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        style="?android:attr/buttonBarButtonStyle"
        android:text="@string/cancel_button"/>

    <Button
        android:id="@+id/fragment_icebox_change_register_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        style="?android:attr/button"
        android:text="@string/change_view_change_button"/>
  </LinearLayout>

</android.support.constraint.ConstraintLayout>
